--- a/PyPoll/PyPoll.ipynb
+++ b/PyPoll/PyPoll.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -179,14 +179,14 @@
        "{'Khan': 2218231, 'Correy': 704200, 'Li': 492940, \"O'Tooley\": 105630}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "zipped = dict(zip(candidates,cand_votes))\n",
-    "zipped"
+    "zipped1 = dict(zip(candidates,cand_votes))\n",
+    "zipped1"
    ]
   },
   {
