--- a/PyBank/PyBank.ipynb
+++ b/PyBank/PyBank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Specify the file\n",
     "file = os.path.join('Resources','budget_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Open the file to be read and set the contents to list\n",
     "with open(file, newline='') as csvfile:\n",
     "    csvreader = csv.reader(csvfile, delimiter=',')\n",
     "\n",
     "    csv_header = next(csvreader)\n",
     "    \n",
     "    budget_list = list(csvreader)\n",
+    "\n",
+    "#Count the number of rows in list to get total months\n",
+    "#Sum the values in second column to get total profits\n",
     "\n",
     "month = 0\n",
     "total = 0\n",
@@ -43,29 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Months: 86\n",
-      "Total: $38382578\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Total Months: {month}\")\n",
-    "print(f\"Total: ${total}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create a new list including only the Profits/Losses\n",
     "budgets = []\n",
     "for row in budget_list:\n",
     "    budgets.append(int(row[1]))"
@@ -73,103 +60,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-2315.12"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# for i in range(0,total):\n",
-    "#     delta = budgets[i] - budgets[i]\n",
-    "#     diff.append(delta)\n",
-    "# print(diff)\n",
+    "#Create a new list using budgets list that takes the difference between the value two rows\n",
     "diff = [j-i for i, j in zip(budgets[:-1], budgets[1:])]\n",
-    "avg_change = round(sum(diff) / float(len(diff)),2)\n",
-    "avg_change"
+    "\n",
+    "#Sum the diff list and then divide by number of values in list to get average Profits/Losses\n",
+    "avg_change = round(sum(diff) / float(len(diff)),2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_prof = max(diff)\n",
-    "max_pos = diff.index(max(diff)) + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min_prof = min(diff)\n",
-    "min_pos = diff.index(min(diff)) + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Append the diff list with 0 for the first value\n",
     "difflist = [0]\n",
     "difflist = difflist + diff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "116771"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "zipped[1][1]"
+    "#Find the index of the max value in the diff list\n",
+    "max_prof = max(difflist)\n",
+    "max_pos = difflist.index(max(difflist))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Feb-12'"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "budget_list[max_pos][0]"
+    "#Find the index of the min value in the diff list\n",
+    "min_prof = min(difflist)\n",
+    "min_pos = difflist.index(min(difflist))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +124,7 @@
     }
    ],
    "source": [
+    "#Print the findings\n",
     "print(f\"Financial Analysis\")\n",
     "print(f\"----------------------------\")\n",
     "print(f\"Total Months: {month}\")\n",
